--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "mocha ./tests/*.test.js",
     "test-watch": "nodemon --exec npm test"
   },
+  "engines" : {
+    "node": "6.2.2"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
