--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha ./tests/*.test.js",
     "test-watch": "nodemon --exec npm test"
   },
-  "engines" : {
+  "engines": {
     "node": "6.2.2"
   },
   "author": "",
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "lodash": "^4.15.0",
     "mongodb": "^2.2.5",
     "mongoose": "^5.3.9"
   },
